--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -126,3 +126,6 @@
 # Helpers
 --------------------------------------------------------------*/
 @import "core/base/helpers";
+
+// custom
+@import "custom/style";
